# gielinor-toolkit

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/boss-tracker/: Cargo.toml
crates/common-db/: Cargo.toml
crates/common-db/src/: client.rs  error.rs  lib.rs  models.rs
crates/common-db/src/repos/: bosses.rs  drops.rs  goals.rs  mod.rs  settings.rs
crates/rs3-api/: Cargo.toml
crates/rs3-api/src/: client.rs  error.rs  ge.rs  hiscores.rs  lib.rs  models.rs  prices.rs  runemetrics.rs
docs/: api-reference.md  architecture.md  data-models.md  future-ideas.md  roadmap.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: bosses.rs  mod.rs  player.rs  prices.rs
ui/: package-lock.json  package.json
