[package]
name = "gielinor-toolkit"
version = "0.1.0"
description = "An RS3 companion toolkit"
authors = ["Craig"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "gielinor_toolkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"

# Workspace crates
rs3-api = { path = "../crates/rs3-api" }
common-db = { path = "../crates/common-db" }
boss-tracker = { path = "../crates/boss-tracker" }
goals = { path = "../crates/goals" }
